<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_outline_account_circle_24"
            android:title="@string/nav_profile" />
      <!--  <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/nav_contact_us" />-->
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/nav_logout" />
    </group>

    <item
        android:title="Communicate"
        android:visible="false">

    </item>

</menu>
