<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OperatorShiftStartEndActivity">

    <RelativeLayout
        android:id="@+id/op_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include
            android:id="@+id/layout_toobar_shift"
            layout="@layout/layout_custom_toolbar" />

        <LinearLayout
            android:id="@+id/op_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_toobar_shift"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textview_current_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/date"
                android:textColor="@color/colorHint"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_edittext_bg">

                <Spinner
                    android:id="@+id/spinner_select_du"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_horizontal"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textview_selected_pump"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="Selected Pump"
                    android:textSize="15sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_edittext_bg">

                <Spinner
                    android:id="@+id/spinner_select_nossel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_horizontal"
                    android:hint=""
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textview_selected_nozzle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="Selected Nozzle  "
                    android:textSize="15sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:padding="5dp"
                        android:text="@string/fuel_type"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:padding="5dp"
                        android:text="@string/rate"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_fuel_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="Fuel Type"
                        android:padding="5dp"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textview_fuel_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="Fuel Rate (Rs)"
                        android:padding="5dp"
                        android:textSize="15sp" />


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:text="@string/start_meter_read"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_start_reading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/enter_start_meter_readop"
                android:inputType="numberDecimal"
                android:textColor="@color/colorHint"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/label_end_reading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:text="End Meter Reading"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_end_reading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="Enter End Meter Reading"
                android:inputType="numberDecimal"
                android:textColor="@color/colorHint"
                android:textSize="15sp"
                android:visibility="gone" />


            <TextView
                android:id="@+id/label_test_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:text="Test Stock By Meter"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_test_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="0"
                android:inputType="numberDecimal"
                android:textColor="@color/colorHint"
                android:textSize="15sp"
                android:visibility="gone" />
            <TextView
                android:id="@+id/textview_actual_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:text="Actual Meter Sale = "
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />
            <TextView
                android:id="@+id/textview_unit_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:text="Unit Sales = "
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_submit_start_shift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                android:elevation="100dp"
                android:ellipsize="middle"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/start_shift"
                android:textColor="@color/colorPlainWhite"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/colorBlack"
                app:strokeColor="@color/colorZencon" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_submit_end_shift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                android:elevation="100dp"
                android:ellipsize="middle"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/end_shift"
                android:textColor="@color/colorPlainWhite"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/colorBlack"
                app:strokeColor="@color/colorZencon" />


        </LinearLayout>

        <TextView
            android:id="@+id/textview_note_opshift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/op_child"
            android:layout_alignParentBottom="true"
            android:padding="16dp"
            android:text="Note : You can't edit any values after shift end. "
            android:textSize="12sp"
            android:visibility="gone"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>